card color theme

--- a/Vocabulous/src/backup.html
+++ b/Vocabulous/src/backup.html
@@ -2,6 +2,11 @@
 
 <polymer-element name="backup" noscript>
   <template>
+    <style>
+        .card{
+          background-color: #ffffff;
+        }
+      </style>
     <input  value="{{hostValue::input}}">
     <div>[[hostValue]]</div>
   </template>
