--- a/Vocabulous/src/home-view.html
+++ b/Vocabulous/src/home-view.html
@@ -21,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       h1{
-        color: grey;
+        color:  var(--headlineCard);
       }
     </style>
 
