--- a/Vocabulous/src/selfcheck-page.html
+++ b/Vocabulous/src/selfcheck-page.html
@@ -177,21 +177,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       #popuplanguage{
         position: absolute;
         z-index: 1;
-        width: 500px;
-        background-color: rgba(134, 221, 255, 0.562);
+        width: 400px;
+        background-color: #dddddd;
         color:black;
-        padding: 5px 0;
-        margin-top: 4.5%;
+        padding: 10px;
+        margin-top: 5.5%;
+        margin-left: 1.75%;
+        opacity: 0.7;
       }
       #popuplanguage::after{
         content: "";
         position: absolute;
         bottom: 100%;
-        left: 48.5%;
+        left: 50%;
         margin-top: -4px;
         border-width: 7px;
         border-style: solid;
-        border-color: transparent transparent rgba(134, 221, 255, 0.562) transparent;
+        border-color: transparent transparent #dddddd transparent;
+        opacity: 0.7;
       }
     </style>
 
