--- a/Vocabulous/src/practiceunit-page.html
+++ b/Vocabulous/src/practiceunit-page.html
@@ -180,24 +180,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       #popuplanguage{
         position: absolute;
         z-index: 1;
-        width: 400px;
-        background-color: #dddddd;
+        width: 500px;
+        background-color: rgba(134, 221, 255, 0.562);
         color:black;
-        padding: 10px;
-        margin-top: 5.5%;
-        margin-left: 1.75%;
-        opacity: 0.7;
+        padding: 5px 0;
+        margin-top: 4.5%;
       }
       #popuplanguage::after{
         content: "";
         position: absolute;
         bottom: 100%;
-        left: 50%;
+        left: 48.5%;
         margin-top: -4px;
         border-width: 7px;
         border-style: solid;
-        border-color: transparent transparent #dddddd transparent;
-        opacity: 0.7;
+        border-color: transparent transparent rgba(134, 221, 255, 0.562) transparent;
       }
       iron-icon.next:hover #popupnext{
         display: block;
@@ -209,23 +206,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         position: absolute;
         z-index: 1;
         width: 500px;
-        background-color: #dddddd;
+        background-color: rgba(134, 221, 255, 0.562);
         color:black;
-        padding: 10px;
+        padding: 5px 0;
         margin-top: -1.5%;
-        margin-left: 51.75%;
-        opacity: 0.7;
+        margin-left: 59.5%;
       }
       #popupnext::after{
         content: "";
         position: absolute;
         bottom: 100%;
-        left: 50%;
+        left: 48.5%;
         margin-top: -4px;
         border-width: 7px;
         border-style: solid;
-        border-color: transparent transparent #dddddd transparent;
-        opacity: 0.7;
+        border-color: transparent transparent rgba(134, 221, 255, 0.562) transparent;
       }
       iron-icon.next:hover #popupnext{
         display: block;
