--- a/old/src/messages-view.html
+++ b/old/src/messages-view.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         padding: 10px;
       }
       h1{
-        color: grey;
+        color:  var(--headlineCard);
       }
     </style>
 
