--- a/old/src/register-login.html
+++ b/old/src/register-login.html
@@ -56,7 +56,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         border-bottom: 4px solidvar(--valo-primary-color-50pct);
       }*/
       .header h1 {
-        color: gray;
+        color:  var(--headlineCard);
         font-size: 24px;
         font-weight: 200;
         margin: 0 auto 5px;
