settings: colorview designed

--- a/Vocabulous/src/settings-view.html
+++ b/Vocabulous/src/settings-view.html
@@ -180,13 +180,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       h3.menuNavigationColor{
         font-weight: 300;
         margin-left: 200px;
-        margin-top: 0px;
         font-size: 15px;
         color:var(--app-secondary-color);
       }
       paper-swatch-picker.menuNavigationColor{
         margin-left: 20px;
-        margin-top: -40px;
+        margin-top: -30px;
         position: absolute;
         --paper-swatch-picker-color-size: 10px;
       }
@@ -291,14 +290,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
       }
       div.colorview{
-        width: 30px;
-        height: 30px;/*
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-top: 20px;*/
+        width: 15px;
+        height: 15px;
+        margin-top: -15px;
         border-style: solid;
         border-color: black;
-        border-width: 1px;
+        border-width: 0.5px;
+        border-radius: 20%;
       }    
     </style>
 
@@ -331,42 +329,42 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </tr>
           <tr>
               <td><h3 class="headerBackground">Background colour</h3></td>
-              <td><paper-swatch-picker class="headerBackground" noink></paper-swatch-picker><div name="headerBackgroundview" class="colorview" hidden="true" style="margin-left: -100px"></div></td>
+              <td><paper-swatch-picker class="headerBackground" noink></paper-swatch-picker><div name="headerBackgroundview" class="colorview" hidden="true" style="margin-left: -130px"></div></td>
               <td><h3 class="headerColor">Font colour</h3></td>
-              <td><paper-swatch-picker class="headerColor" noink></paper-swatch-picker><div name="headerColorview" hidden="true" class="colorview"></div></td>
+              <td><paper-swatch-picker class="headerColor" noink></paper-swatch-picker><div name="headerColorview" hidden="true" class="colorview" style="margin-left: 40px"></div></td>
           </tr>
           <tr>
               <td><h3 class="menu">Menu</h3></td>
           </tr>
           <tr>
               <td><h3 class="menuBackground">Background color</h3></td>
-              <td><paper-swatch-picker class="menuBackground" noink></paper-swatch-picker><div name="menuBackgroundview" hidden="true" class="colorview" style="margin-left: -100px"></div></td>
+              <td><paper-swatch-picker class="menuBackground" noink></paper-swatch-picker><div name="menuBackgroundview" hidden="true" class="colorview" style="margin-left: -130px"></div></td>
               <td><h3 class="menuColor">Font colour</h3></td>
-              <td><paper-swatch-picker class="menuColor" noink></paper-swatch-picker><div name="menuColorview" hidden="true" class="colorview"></div></td>
+              <td><paper-swatch-picker class="menuColor" noink></paper-swatch-picker><div name="menuColorview" hidden="true" class="colorview" style="margin-left: 40px"></div></td>
               <td><h3 class="menuNavigationColor">Navigation colour</h3></td>
-              <td><paper-swatch-picker class="menuNavigationColor" noink></paper-swatch-picker><div name="menuNaviationColorview" hidden="true" class="colorview"></div></td>
+              <td><paper-swatch-picker class="menuNavigationColor" noink></paper-swatch-picker><div name="menuNaviationColorview" hidden="true" class="colorview" style="margin-left: 50px"></div></td>
           </tr>
           <tr>
             <td><h3 class="menuNavigationFontColor">Navigation Font colour</h3></td>
-            <td><paper-swatch-picker class="menuNavigationFontColor" noink></paper-swatch-picker><div name="menuNavigationFontColorview" hidden="true" class="colorview" style="margin-left: -100px"></div></td>
+            <td><paper-swatch-picker class="menuNavigationFontColor" noink></paper-swatch-picker><div name="menuNavigationFontColorview" hidden="true" class="colorview" style="margin-left: -130px"></div></td>
           </tr>
           <tr>
               <td><h3 class="displayArea">Card Area</h3></td>
           </tr>
           <tr>
               <td><h3 class="displayAreaBackground">Background colour</h3></td>
-              <td><paper-swatch-picker class="displayAreaBackground" noink></paper-swatch-picker><div name="displayAreaBackgroundview" hidden="true" class="colorview" style="margin-left: -100px"></div></td>
+              <td><paper-swatch-picker class="displayAreaBackground" noink></paper-swatch-picker><div name="displayAreaBackgroundview" hidden="true" class="colorview" style="margin-left: -130px"></div></td>
           </tr>
           <tr>
               <td><h3 class="displayArea">Card</h3></td>
           </tr>
           <tr>
               <td><h3 class="cardBackground">Background colour</h3></td>
-              <td><paper-swatch-picker class="cardBackground" noink></paper-swatch-picker><div name="cardBackgroundview" hidden="true" class="colorview" style="margin-left: -100px"></div></td>
+              <td><paper-swatch-picker class="cardBackground" noink></paper-swatch-picker><div name="cardBackgroundview" hidden="true" class="colorview" style="margin-left: -130px"></div></td>
               <td><h3 class="headlineColor">Headline colour</h3></td>
-              <td><paper-swatch-picker class="headlineColor" noink></paper-swatch-picker><div name="headlineColorview" hidden="true" class="colorview"></div></td>
-              <td><h3 class="cardFontColor">Paragraph font colour</h3></td>
-              <td><paper-swatch-picker class="cardFontColor" noink></paper-swatch-picker><div name="cardFontColorview" hidden="true" class="colorview"></div></td>
+              <td><paper-swatch-picker class="headlineColor" noink></paper-swatch-picker><div name="headlineColorview" hidden="true" class="colorview" style="margin-left: 40px"></div></td>
+              <td><h3 class="cardFontColor">Paragraph Font colour</h3></td>
+              <td><paper-swatch-picker class="cardFontColor" noink></paper-swatch-picker><div name="cardFontColorview" hidden="true" class="colorview" style="margin-left: 50px"></div></td>
           </tr>
         </table>
     </div>
