--- a/old/src/selfcheck-page.html
+++ b/old/src/selfcheck-page.html
@@ -177,24 +177,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       #popuplanguage{
         position: absolute;
         z-index: 1;
-        width: 400px;
-        background-color: #dddddd;
+        width: 500px;
+        background-color: rgba(134, 221, 255, 0.562);
         color:black;
-        padding: 10px;
-        margin-top: 5.5%;
-        margin-left: 1.75%;
-        opacity: 0.7;
+        padding: 5px 0;
+        margin-top: 4.5%;
       }
       #popuplanguage::after{
         content: "";
         position: absolute;
         bottom: 100%;
-        left: 50%;
+        left: 48.5%;
         margin-top: -4px;
         border-width: 7px;
         border-style: solid;
-        border-color: transparent transparent #dddddd transparent;
-        opacity: 0.7;
+        border-color: transparent transparent rgba(134, 221, 255, 0.562) transparent;
       }
     </style>
 
