--- a/old/src/settings-view.html
+++ b/old/src/settings-view.html
@@ -290,6 +290,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           border: var(--app-secondary-color);
         }
       }
+      div.colorview{
+        width: 30px;
+        height: 30px;/*
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 20px;*/
+        border-style: solid;
+        border-color: black;
+        border-width: 1px;
+      }    
     </style>
 
     <div class="card">
@@ -321,42 +331,42 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </tr>
           <tr>
               <td><h3 class="headerBackground">Background colour</h3></td>
-              <td><paper-swatch-picker class="headerBackground" noink></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="headerBackground" noink></paper-swatch-picker><div name="headerBackgroundview" class="colorview" hidden="true" style="margin-left: -100px"></div></td>
               <td><h3 class="headerColor">Font colour</h3></td>
-              <td><paper-swatch-picker class="headerColor" noink></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="headerColor" noink></paper-swatch-picker><div name="headerColorview" hidden="true" class="colorview"></div></td>
           </tr>
           <tr>
               <td><h3 class="menu">Menu</h3></td>
           </tr>
           <tr>
               <td><h3 class="menuBackground">Background color</h3></td>
-              <td><paper-swatch-picker class="menuBackground" noink></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="menuBackground" noink></paper-swatch-picker><div name="menuBackgroundview" hidden="true" class="colorview" style="margin-left: -100px"></div></td>
               <td><h3 class="menuColor">Font colour</h3></td>
-              <td><paper-swatch-picker class="menuColor" noink></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="menuColor" noink></paper-swatch-picker><div name="menuColorview" hidden="true" class="colorview"></div></td>
               <td><h3 class="menuNavigationColor">Navigation colour</h3></td>
-              <td><paper-swatch-picker class="menuNavigationColor" noink></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="menuNavigationColor" noink></paper-swatch-picker><div name="menuNaviationColorview" hidden="true" class="colorview"></div></td>
           </tr>
           <tr>
             <td><h3 class="menuNavigationFontColor">Navigation Font colour</h3></td>
-            <td><paper-swatch-picker class="menuNavigationFontColor" noink></paper-swatch-picker></td>
+            <td><paper-swatch-picker class="menuNavigationFontColor" noink></paper-swatch-picker><div name="menuNavigationFontColorview" hidden="true" class="colorview" style="margin-left: -100px"></div></td>
           </tr>
           <tr>
               <td><h3 class="displayArea">Card Area</h3></td>
           </tr>
           <tr>
               <td><h3 class="displayAreaBackground">Background colour</h3></td>
-              <td><paper-swatch-picker class="displayAreaBackground" noink></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="displayAreaBackground" noink></paper-swatch-picker><div name="displayAreaBackgroundview" hidden="true" class="colorview" style="margin-left: -100px"></div></td>
           </tr>
           <tr>
               <td><h3 class="displayArea">Card</h3></td>
           </tr>
           <tr>
               <td><h3 class="cardBackground">Background colour</h3></td>
-              <td><paper-swatch-picker class="cardBackground" noink></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="cardBackground" noink></paper-swatch-picker><div name="cardBackgroundview" hidden="true" class="colorview" style="margin-left: -100px"></div></td>
               <td><h3 class="headlineColor">Headline colour</h3></td>
-              <td><paper-swatch-picker class="headlineColor" noink></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="headlineColor" noink></paper-swatch-picker><div name="headlineColorview" hidden="true" class="colorview"></div></td>
               <td><h3 class="cardFontColor">Paragraph font colour</h3></td>
-              <td><paper-swatch-picker class="cardFontColor" noink></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="cardFontColor" noink></paper-swatch-picker><div name="cardFontColorview" hidden="true" class="colorview"></div></td>
           </tr>
         </table>
     </div>
@@ -385,6 +395,36 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getThemeName(){
         return Polymer.dom(this.root).querySelector("paper-input[class=themeName]");
+      }
+      _getHeaderBackgroundColourView(){
+        return Polymer.dom(this.root).querySelector("div[name=headerBackgroundview]");
+      }
+      _getHeaderFontColourView(){
+        return Polymer.dom(this.root).querySelector("div[name=headerColorview]");
+      }
+      _getMenuBackgroundColourView(){
+        return Polymer.dom(this.root).querySelector("div[name=menuBackgroundview]");
+      }
+      _getMenuFontColourView(){
+        return Polymer.dom(this.root).querySelector("div[name=menuColorview]");
+      }
+      _getMenuNavigationColourView(){
+        return Polymer.dom(this.root).querySelector("div[name=menuNaviationColorview]");
+      }
+      _getMenuNavigationFontColourView(){
+        return Polymer.dom(this.root).querySelector("div[name=menuNavigationFontColorview]");
+      }
+      _getCardAreaBackgroundColourView(){
+        return Polymer.dom(this.root).querySelector("div[name=displayAreaBackgroundview]");
+      }
+      _getCardBackgroundColourView(){
+        return Polymer.dom(this.root).querySelector("div[name=cardBackgroundview]");
+      }
+      _getCardHeadlineColourView(){
+        return Polymer.dom(this.root).querySelector("div[name=headlineColorview]");
+      }
+      _getCardFontColourView(){
+        return Polymer.dom(this.root).querySelector("div[name=cardFontColorview]");
       }
       _getHeaderBackgroundColour(){
         return Polymer.dom(this.root).querySelector("paper-swatch-picker[class=headerBackground]");
