Create Unit Bugfix
Create Unit Toast caused error

--- a/Vocabulous/src/overview-page.html
+++ b/Vocabulous/src/overview-page.html
@@ -333,16 +333,16 @@
       _showPage404() {
         this.page = 'not-found';
       }
-      _getSettingsToast0(){
+      _getSettingsToast(){
         return Polymer.dom(this.root).querySelector("paper-toast[id=toast0]");
       }
-      _getSettingsToast1(){
+      _getCorrectWordToast(){
         return Polymer.dom(this.root).querySelector("paper-toast[id=toast1]");
       }
-      _getSettingsToast2(){
+      _getSecondTryToast(){
         return Polymer.dom(this.root).querySelector("paper-toast[id=toast2]");
       }
-      _getSettingsToast3(){
+      _getWrongWordToast(){
         return Polymer.dom(this.root).querySelector("paper-toast[id=toast3]");
       }
     }
