--- a/Vocabulous/src/unit-page.html
+++ b/Vocabulous/src/unit-page.html
@@ -90,7 +90,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   <d2l-menu label="Menu">
                     <d2l-menu-item text="Practice Variants">
                         <d2l-menu>
-                            <d2l-menu-item name="practiceUnit" text="Practice Unit"></d2l-menu-item>
+                            <d2l-menu-item name="practiceUnit" text="Practice"></d2l-menu-item>
+                            <d2l-menu-item name="practiceUnitSelectionmode" text="Selectionmode"></d2l-menu-item>
                         </d2l-menu>
                     </d2l-menu-item>
                     <d2l-menu-item name="selfCheck" text="Self-check"></d2l-menu-item>
@@ -118,6 +119,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getPracticeButton(){
         return Polymer.dom(this.root).querySelector("d2l-menu-item[name=practiceUnit]");
+      }
+      _getPracticeButtonSelectionmode(){
+        return Polymer.dom(this.root).querySelector("d2l-menu-item[name=practiceUnitSelectionmode]");
       }
       _getExamButton(){
         return Polymer.dom(this.root).querySelector("d2l-menu-item[name=selfCheck]");
